--- a/Anchor.toml
+++ b/Anchor.toml
@@ -9,7 +9,9 @@ url = "https://api.apr.dev"
 
 [provider]
 cluster = "Localnet"
-wallet = "/Users/bandit/.config/solana/id.json"
+wallet = "id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+init-dispenser = "ts-node ./scripts/init.ts"
+get-tree-prices = "ts-node ./scripts/getTreePrices.ts"
