--- a/programs/soap-dispenser/Cargo.toml
+++ b/programs/soap-dispenser/Cargo.toml
@@ -18,7 +18,7 @@ default = []
 [dependencies]
 anchor-lang = "0.26.0"
 anchor-spl = { version = "0.26.0" }
-solana-program = "^1.14.1"
+solana-program = "=1.14.13"
 mpl-token-metadata = { version = "1.12.0", features = ["no-entrypoint"] }
 spl-account-compression = { version="0.1.8", features = ["cpi"] }
 mpl-bubblegum = { version = "0.8.0", features = ["no-entrypoint"] }
