--- a/Anchor.toml
+++ b/Anchor.toml
@@ -15,3 +15,4 @@ wallet = "id.json"
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
 init-dispenser = "ts-node ./scripts/init.ts"
 get-tree-prices = "ts-node ./scripts/getTreePrices.ts"
+init-idl = "node ./scripts/initIdl.js"
