--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@project-serum/anchor": "^0.26.0",
     "@solana/spl-account-compression": "^0.1.8",
     "@solana/spl-token": "^0.3.8",
-    "@solana/web3.js": "^1.77.3"
+    "@solana/web3.js": "^1.77.3",
+    "child_process": "^1.0.2"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
