--- a/programs/soap-dispenser/Cargo.toml
+++ b/programs/soap-dispenser/Cargo.toml
@@ -16,10 +16,15 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = "0.26.0"
+# anchor-lang = "0.26.0"
+# solana-program = "^1.14.13"
+# mpl-token-metadata = { version = "1.12.0", features = ["no-entrypoint"] }
+# spl-account-compression = { version="0.1.8", features = ["cpi"] }
+anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
 anchor-spl = { version = "0.26.0" }
-solana-program = "=1.14.13"
-mpl-token-metadata = { version = "1.12.0", features = ["no-entrypoint"] }
-spl-account-compression = { version="0.1.8", features = ["cpi"] }
 mpl-bubblegum = { version = "0.8.0", features = ["no-entrypoint"] }
-bs58 = "^0.4.0"
+mpl-token-metadata = { version = "1.11", features = ["no-entrypoint"] }
+solana-program = "1.14.13"
+spl-account-compression = { version="0.1.8", features = ["cpi"] }
+winnow = "=0.4.1"
+toml_datetime = "=0.6.1"
