Supports Minting cNFT

--- a/Anchor.toml
+++ b/Anchor.toml
@@ -16,3 +16,7 @@ test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
 init-dispenser = "ts-node ./scripts/init.ts"
 get-tree-prices = "ts-node ./scripts/getTreePrices.ts"
 init-idl = "node ./scripts/initIdl.js"
+mint = "ts-node ./scripts/mint.ts"
+get-asset = "ts-node ./scripts/getAsset.ts"
+fund-pot = "ts-node ./scripts/fundPot.ts"
+withdraw-pot = "ts-node ./scripts/withdrawPot.ts"
