--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@solana/spl-account-compression": "^0.1.8",
     "@solana/spl-token": "^0.3.8",
     "@solana/web3.js": "^1.77.3",
-    "child_process": "^1.0.2"
+    "child_process": "^1.0.2",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
